# oculith

./: .env.test  .gitignore  README.md  README_API_CHANGES.md  SIMPLIFIED_API.md  pyproject.toml  pytest.ini  run_diagnostic.sh  run_queue_diagnostic.sh  run_tests.sh
src/oculith/: __init__.py  common.py  config.py  convert.py  exporter.py  fetch.py  file_utils.py  ocr.py  parquet.py  simple.py  vlm_config.py
src/oculith/api/: endpoints.py
src/oculith/core/: __init__.py  converter.py  file_service.py  litellm.py  pipeline.py  queue_manager.py  retriever.py
tests/: __init__.py  conftest.py  fast.py  myfigure.py  simple_llm.py  test_chunker.py  test_concurrent_tasks.py  test_document_processor.py  test_extract_text.py  test_file_listing.py  test_file_processing.py  test_image_processing.py  test_md_convert.py  test_ocr_text.py  test_pdf_ocr.py  test_pdf_standard.py  test_pdf_vlm.py  test_retriever.py  test_simple_formats.py  test_sse_generator.py  test_sse_stream.py  test_upload_convert_process.py  test_utils.py
tests/data/: __init__.py  demo.docx
tests/data/md/: duck.md
tools/: queue_diagnostics.py
