[tool.poetry]
name = "oculith"
version = "0.2.0"
description = "Document OCR based on docling"
authors = ["arcstep <43801@qq.com>"]
readme = "README.md"
packages = [
    { include = "oculith", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
docling = ">=2.30.0"
voidrail = {path = "../voidrail", develop = true}
celery = {extras = ["redis"], version = "^5.5.2"}
click = "^8.1.8"
tiktoken = "^0.9.0"
tesserocr = "^2.8.0"
ocrmac = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oculith = "oculith.__main__:main"
